--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>spring-richclient</artifactId>
     <packaging>pom</packaging>
     <name>Spring Rich Client</name>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>3.0.0</version>
     <description>
         Spring-rich adds value for people needing to develop Swing applications and do so in a way that promotes
         consistent, well-designed, configurable Swing applications. The spring-rich developers strongly feel the
@@ -312,10 +312,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.0.2</version>
-                    <configuration>
-                        <source>1.5</source>
-                        <target>1.5</target>
-                    </configuration>
+
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -509,7 +506,7 @@
     </reporting>
 
     <properties>
-        <spring.version>2.5.5</spring.version>
+        <spring.version>3.2.15.RELEASE</spring.version>
     </properties>
 
     <profiles>
@@ -560,14 +557,14 @@
         <!--<module>spring-richclient-support</module>-->
         <!--<module>spring-richclient-jdk5</module>-->
         <module>spring-richclient-jdk6</module>
-        <module>spring-richclient-sandbox</module>
-        <module>spring-richclient-manual</module>
+        <!-- module>spring-richclient-sandbox</module -->
+        <!--module>spring-richclient-manual</module-->
         <!-- Enabling this will petclinic common not be (re)installed on mvn install... -->
         <!-- TODO bug in maven -->
         <!--<module>spring-richclient-full</module>-->
-        <module>spring-richclient-samples</module>
-        <module>spring-richclient-archetype</module>
-        <module>spring-richclient-integrations</module>
+        <!-- module>spring-richclient-samples</module-->
+        <!-- module>spring-richclient-archetype</module-->
+        <!-- module>spring-richclient-integrations</module-->
         <!-- Module release is delibertly skipped -->
     </modules>
 
