--- a/spring-richclient-archetype/pom.xml
+++ b/spring-richclient-archetype/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.richclient</groupId>
         <artifactId>spring-richclient</artifactId>
-        <version>1.1.1-SNAPSHOT</version>
+        <version>3.0.0</version>
     </parent>
 
     <artifactId>spring-richclient-archetype</artifactId>
