--- a/spring-richclient-samples/pom.xml
+++ b/spring-richclient-samples/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.springframework.richclient</groupId>
     <artifactId>spring-richclient</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>3.0.0</version>
   </parent>
 
   <groupId>org.springframework.richclient.samples</groupId>
