--- a/spring-richclient-samples/spring-richclient-samples-simple/pom.xml
+++ b/spring-richclient-samples/spring-richclient-samples-simple/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.richclient.samples</groupId>
         <artifactId>spring-richclient-samples</artifactId>
-        <version>1.1.1-SNAPSHOT</version>
+        <version>3.0.0</version>
     </parent>
 
     <groupId>org.springframework.richclient.samples</groupId>
