--- a/spring-richclient-samples/spring-richclient-samples-vldocking/pom.xml
+++ b/spring-richclient-samples/spring-richclient-samples-vldocking/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>spring-richclient-samples</artifactId>
     <groupId>org.springframework.richclient.samples</groupId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>3.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.richclient.samples</groupId>
